fix overflow-x on chrome

--- a/_assets/stylesheets/application.css.scss
+++ b/_assets/stylesheets/application.css.scss
@@ -5,7 +5,7 @@
 
 @import "global";
 
-/* 
+/*
  * Global Reset
 */
 
@@ -22,6 +22,7 @@ body {
   //text-align: center;
   font: 100% $font-stack;
   font-weight: $fweight-default;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 { font-size: 100%; }
@@ -79,7 +80,7 @@ header{
 /* content */
 section#content_wrapper{
   h1{
-    font-family: $font-stack; 
+    font-family: $font-stack;
     font-size: 2em;
     font-weight: $fweight-normal;
   }
